# Blackscholes

./: README.md  bloom_api.py  index.py
.spyproject/config/backups/: workspace.ini.bak
blpapi_cpp_3.18.4.1/cmake/: blpapiConfig.cmake  blpapiTargets-release.cmake  blpapiTargets.cmake
blpapi_cpp_3.18.4.1/doc/: ChangeLog.txt
blpapi_cpp_3.18.4.1/doc/html/: annotated.html  blpapi_8h.html  blpapi__abstractsession_8h.html  blpapi__abstractsession_8h_source.html  blpapi__authoptions_8h.html  blpapi__authoptions_8h_source.html  blpapi__call_8h.html  blpapi__call_8h_source.html  blpapi__constant_8h.html  blpapi__constant_8h_source.html  blpapi__correlationid_8h.html  blpapi__correlationid_8h_source.html  blpapi__datetime_8h.html  blpapi__datetime_8h_source.html  blpapi__defs_8h.html  blpapi__defs_8h_source.html  blpapi__diagnosticsutil_8h.html  blpapi__diagnosticsutil_8h_source.html  blpapi__dispatchtbl_8h.html  blpapi__dispatchtbl_8h_source.html  blpapi__element_8h.html  blpapi__element_8h_source.html  blpapi__error_8h.html  blpapi__error_8h_source.html  blpapi__event_8h.html  blpapi__event_8h_source.html  blpapi__eventdispatcher_8h.html  blpapi__eventdispatcher_8h_source.html  blpapi__eventformatter_8h.html  blpapi__eventformatter_8h_source.html  blpapi__exception_8h.html  blpapi__exception_8h_source.html  blpapi__highresolutionclock_8h.html  blpapi__highresolutionclock_8h_source.html  blpapi__identity_8h.html  blpapi__identity_8h_source.html  blpapi__logging_8h.html  blpapi__logging_8h_source.html  blpapi__message_8h.html  blpapi__message_8h_source.html  (+319 more)
blpapi_cpp_3.18.4.1/examples/demoapps/: ApiFieldsExample.cpp  BroadcastPublisherExample.cpp  CMakeLists.txt  ContributionsExample.cpp  EntitlementsVerificationRequestResponseExample.cpp  EntitlementsVerificationSubscriptionExample.cpp  GenerateTokenExample.cpp  InteractivePublisherExample.cpp  MultipleRequestsOverrideExample.cpp  README.md  RequestResponseExample.cpp  RequestServiceConsumerExample.cpp  RequestServiceProviderExample.cpp  SecurityLookupExample.cpp  SnapshotRequestTemplateExample.cpp  SubscriptionExample.cpp  SubscriptionWithEventPollingExample.cpp  UserModeExample.cpp  examples.list
blpapi_cpp_3.18.4.1/examples/demoapps/snippets/apiflds/: ApiFieldsRequestUtils.h  CategorizedFieldSearchRequests.h  FieldInfoRequests.h  FieldListRequests.h  FieldSearchRequests.h
blpapi_cpp_3.18.4.1/examples/demoapps/snippets/instruments/: CurveListRequests.h  GovtListRequests.h  InstrumentListRequests.h
blpapi_cpp_3.18.4.1/examples/demoapps/snippets/requestresponse/: HistoricalDataRequests.h  IntradayBarRequests.h  IntradayTickRequests.h  ReferenceDataRequests.h
blpapi_cpp_3.18.4.1/examples/demoapps/util/: ArgParser.h  ConnectionAndAuthOptions.h  MaxEventsOption.h  RequestOptions.h  SubscriptionOptions.h  Utils.h
blpapi_cpp_3.18.4.1/examples/demoapps/util/events/: SessionRouter.h
blpapi_cpp_3.18.4.1/examples/unittests/: CMakeLists.txt  GTEST_CMakeLists.txt.in  README.md
blpapi_cpp_3.18.4.1/examples/unittests/mktnotifier/: CMakeLists.txt  README.md
blpapi_cpp_3.18.4.1/examples/unittests/mktnotifier/src/: CMakeLists.txt  appconfig.cpp  appconfig.h  application.cpp  application.h  authorizer.cpp  authorizer.h  computeengine.cpp  computeengine.h  eventprocessor.cpp  eventprocessor.h  eventqueue.h  main.cpp  notifier.cpp  notifier.h  subscriber.cpp  subscriber.h  tokengenerator.cpp  tokengenerator.h
blpapi_cpp_3.18.4.1/examples/unittests/mktnotifier/tests/: CMakeLists.txt  application.t.cpp  authorizer.t.cpp  eventprocessor.t.cpp  messageTypes.h  mockComputeEngine.h  mockNotifier.h  mockSession.h  test.t.cpp  testSchemas.cpp  testSchemas.h  tokengenerator.t.cpp
blpapi_cpp_3.18.4.1/examples/unittests/snippets/: CMakeLists.txt  README.md
blpapi_cpp_3.18.4.1/examples/unittests/snippets/events/: CMakeLists.txt  events.t.cpp
blpapi_cpp_3.18.4.1/examples/unittests/snippets/refdata/: CMakeLists.txt  README.md  refdata.t.cpp
blpapi_cpp_3.18.4.1/examples/unittests/snippets/resolver/: README.md
blpapi_cpp_3.18.4.1/examples/unittests/snippets/resolver/src/: CMakeLists.txt  main.cpp  resolver_utils.cpp  resolver_utils.h
blpapi_cpp_3.18.4.1/examples/unittests/snippets/resolver/tests/: CMakeLists.txt  mockProviderSession.h  resolver_utils.t.cpp
blpapi_cpp_3.18.4.1/include/: blpapi_abstractsession.h  blpapi_authoptions.h  blpapi_call.h  blpapi_constant.h  blpapi_correlationid.h  blpapi_datetime.h  blpapi_defs.h  blpapi_diagnosticsutil.h  blpapi_dispatchtbl.h  blpapi_element.h  blpapi_error.h  blpapi_event.h  blpapi_eventdispatcher.h  blpapi_eventformatter.h  blpapi_exception.h  blpapi_highresolutionclock.h  blpapi_identity.h  blpapi_logging.h  blpapi_message.h  blpapi_messageformatter.h  blpapi_name.h  blpapi_names.h  blpapi_providersession.h  blpapi_request.h  blpapi_requesttemplate.h  blpapi_resolutionlist.h  blpapi_schema.h  blpapi_service.h  blpapi_session.h  blpapi_sessionoptions.h  blpapi_streamproxy.h  blpapi_subscriptionlist.h  blpapi_testutil.h  blpapi_timepoint.h  blpapi_tlsoptions.h  blpapi_topic.h  blpapi_topiclist.h  blpapi_types.h  blpapi_versioninfo.h  blpapi_versionmacros.h  (+1 more)
blpapi_cpp_3.18.4.1/lib/: blpapi3_32.lib  blpapi3_64.lib
templates/: app.html  main.html  trial.html
